--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 checkpoints/sam_beard_best.pth filter=lfs diff=lfs merge=lfs -text
+checkpoints/sam_vit_b_01ec64.pth filter=lfs diff=lfs merge=lfs -text
