--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ segment-anything/
 # Checkpoints and models
 checkpoints/*.pth
 !checkpoints/sam_beard_best.pth  # Allow this one via Git LFS
+!checkpoints/sam_vit_b_01ec64.pth  # Allow this one via Git LFS
 *.pth
 *.pkl
 *.npy
